updated header to preventing overflow

--- a/production_css/style.production.css
+++ b/production_css/style.production.css
@@ -72,7 +72,7 @@ a:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
+  width: auto;
   padding: 20px;
   -webkit-box-align: center;
       -ms-flex-align: center;
